2010-08-28  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Sam Weinig.

        When properties are missing from animation keyframes, interpolate between those keyframes that specify them
        https://bugs.webkit.org/show_bug.cgi?id=40794

        Some preliminary cleanup; for vectors, prefer indexed access rather than using iterators.

        No behavior changes.

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::keyframeStylesForAnimation):
        * page/animation/KeyframeAnimation.cpp:
        (WebCore::KeyframeAnimation::getKeyframeAnimationInterval):
        (WebCore::KeyframeAnimation::validateTransformFunctionList):
        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::startAnimation):
        * rendering/style/KeyframeList.h:
        (WebCore::KeyframeList::at):
        (WebCore::KeyframeList::keyframes):

Canonical link: https://commits.webkit.org/57077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66310 268f45cc-cd09-0410-ab3c-d52691b4dbfc