WebCore/css/CSSStyleSelector.cpp
@@ -1483,7 +1483,7 @@ void CSSStyleSelector::keyframeStylesForAnimation(Element* e, const RenderStyle*
     
     // If the 0% keyframe is missing, create it (but only if there is at least one other keyframe)
     int initialListSize = list.size();
-    if (initialListSize > 0 && list.beginKeyframes()->key() != 0) {
+    if (initialListSize > 0 && list[0].key() != 0) {
         RefPtr<WebKitCSSKeyframeRule> keyframe = WebKitCSSKeyframeRule::create();
         keyframe->setKeyText("0%");
         keyframeStyle = styleForKeyframe(elementStyle, keyframe.get(), list);
@@ -1491,7 +1491,7 @@ void CSSStyleSelector::keyframeStylesForAnimation(Element* e, const RenderStyle*
     }
 
     // If the 100% keyframe is missing, create it (but only if there is at least one other keyframe)
-    if (initialListSize > 0 && (list.endKeyframes() - 1)->key() != 1) {
+    if (initialListSize > 0 && (list[list.size() - 1].key() != 1)) {
         RefPtr<WebKitCSSKeyframeRule> keyframe = WebKitCSSKeyframeRule::create();
         keyframe->setKeyText("100%");
         keyframeStyle = styleForKeyframe(elementStyle, keyframe.get(), list);
